force-app/main/default/objects/UserInactiveHistory__c/UserInactiveHistory__c.object-meta.xml
<CustomObject>
    <label>UserInactiveHistory</label>
    <nameField>
        <displayFormat>UH-{0000000000}</displayFormat>
        <label>UserInactiveHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserInactiveHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>