force-app/main/default/objects/UserInactiveHistory__c/fields/Created_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Created_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created_Datetime</label>
    <type>DateTime</type>
</CustomField>