force-app/main/default/objects/UserInactiveHistory__c/fields/Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>