force-app/main/default/objects/UserInactiveHistory__c/fields/LastModified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>LastModified_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastModified Datetime</label>
    <type>DateTime</type>
</CustomField>