force-app/main/default/objects/UserInactiveHistory__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region / Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>