force-app/main/default/objects/UserInactiveHistory__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Code / Group Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>