force-app/main/default/objects/UserInactiveHistory__c/fields/RTL_Branch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team Name (Code)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>