force-app/main/default/objects/UserInactiveHistory__c/fields/RTL_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch / Team Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>