force-app/main/default/objects/UserInactiveHistory__c/fields/RTL_Channel__c.field-meta.xml
<CustomField>
    <fullName>RTL_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>