force-app/main/default/objects/UserInactiveHistory__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserInactiveHistory</relationshipName>
    <type>Lookup</type>
</CustomField>