force-app/main/default/objects/UserInactiveHistory__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserEmail</label>
    <type>Email</type>
</CustomField>