force-app/main/default/objects/UserInactiveHistory__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone/Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>